Clean-up definitions class hierarchy
Reviewed and documented the class hierarchy for definitions:

1. Added rudimentary documentation in some places.
2. Many historic javadocs that were hidden in the implementation classes
(since splitting interfaces from implementations in 2016) are now
pulled up to interfaces. They have to be reviewed, though.
3. Removed obsolete ComplexTypeDefinition#isShared and
deprecated PrismPropertyDefinitionImpl#valueType.
4. Removed misplaced DefinitionImpl#inherited, as it is applicable
only to items.
5. Simplified/deduplicated code for deepClone methods.
6. Removed ComplexTypeDefinition#containsItemDefinition(QName) method.
7. Methods for copying from source to target definition (used e.g.
for cloning) now support arbitrary source: not just the specific
implementation class. See e.g.
ComplexTypeDefinitionImpl#copyDefinitionDataFrom.
(This has some downsides, though. Maybe it should be reconsidered.)
8. LocalDefinitionStore was renamed to LocalItemDefinitionStore
and cleaned up.

Other changes:

1. Removed prismContext parameter from constructors of various objects
(to simplify them).
2. Containerable is now Freezable.
3. PrismSchema is now Cloneable.
4. Added CloneUtil#toImmutable & CloneUtil#toImmutableContainerable
methods.
5. Deleted obsolete ItemImpl#immutable.
6. Added FreezableList and DeeplyFreezableList classes.
7. Fixed cloning of ObjectDeltaType (object to add was not cloned)
revive method no longer throws SchemaException
removed some unused methods from PrismContainerDefinition

Work in progress.

TODO: Review delegator classes.